--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@ body {
   height: 200px;
   /* max-width: calc((100% - 48px) / 3); */
 }
+.gallery-item {
+  transition: scale 100ms ease-in;
+}
 .gallery-item:hover {
   scale: 1.04;
 }
