--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -13,15 +13,20 @@ p:last-child {
   margin-bottom: 0;
 }
 
-ul {
+ul,
+li {
   margin: 0;
   padding: 0;
   list-style: none;
+  list-style-type: none;
+  display: block;
 }
 
 a {
   color: currentColor;
-  text-decoration: none;
+  padding: 0;
+  margin: 0;
+  display: block;
 }
 
 button {
