--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,9 @@
 */
 @import url('./reset.css');
 @import url('./gallery.css');
+@import url('./simplelightbox.css');
 @import url('./form.css');
+@import url('./logo.css');
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
